# 2d-data-curve-fitter

./: .gitignore  CMakeLists.txt
data/: encoding_data1.json
sources/: CMakeLists.txt  config.cpp  config.h  data_set.h  main.cpp  model_tester.h
sources/libs/: curve_fit.cpp  curve_fit.h
sources/models/: math_util.h  models.h
sources/utils/: program_options.cpp  program_options.h
tests/: gauss-newton.ipynb  gauss-newton.py  regression.ipynb  regression.py
